--- a/cv.html
+++ b/cv.html
@@ -22,6 +22,7 @@
 				</nav>
 				<div class="cv-main-content">
 					<div class="name-dp">
+						<img class="cv-dp" src="aagya.jpg">
 						<img class="about-me">
 						<h3 class="name">Aagya Uprety</h3>
 						<p class="cv-intro">I am the student of bsc.computing(hons)at Nami college,
