modified folder has been html and css

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,1 +1,33 @@
 <!doctype html>
+	<html lang="en">
+	<head>
+		<<meta name="viewport"content="width=device-width,initial-scale=1.0">
+		<title>portfolio</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
+		</head>
+		<body>
+			<div class="portfolio-selection">
+				<nav class="menu"id="menu-portfolio">
+					<div class="link">
+						<ul>
+							<li><a href="index.html">Home</a></li>
+						<li><a href="portfolio.html">portfolio</a></li>
+						<li><a href="cv.html">cv</a></li>
+						<li><a href="contact.html">contact</a></li>
+						<li><a href="sitereport.html">sitereport</a></li>
+					</ul>
+				</nav>
+					<div>
+						<div class="main">
+							<div class="rows">
+						<h4 class="title-title">skills</h4>
+						<img src="dummy1.jpg"palceholder/500x400>
+					</div>
+					<div class="title">
+					   <img src="dummy2.jpg"palceholder/50x20>
+					</div>
+				<div class="title">
+					 <img src="dummy3.jpg"palceholder/200x50>
+					</div>
+				</div>
+			</div>
