--- a/sitereport.html
+++ b/sitereport.html
@@ -20,3 +20,9 @@
 						<h2>Aagya uprety</h2>
 					</div>
 				</nav>
+				<div class="object">Objectives:</div>
+				<ul class="points">
+				</li>.The main objectives to give this assaignment is to provide  clear idea of  learning in response to  student work are documented. IT is to estimate our own capability of making those websites by our ownselves.</li>
+				<li>.The assaignment was to make a portfolio page using html and css by our ownself.</li>
+					<li>.The coding that we have done should be pushed in github as well .</li>
+				</ul>
