html file modified

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<div class="home-content">
 					<div class="about">
 						<h1 id="intro">Hey, I'm Aagya Uprety</h1>
-						<p id="intro-para">I am the  student of Bsc.computing(hons)at Nami college,
+						<p id="intro-para">I am the  student of Bsc.computing at Nami college,
 						kathmandu</p>
 					</div>
 					<div class="profile-image">
