--- a/sitereport.html
+++ b/sitereport.html
@@ -20,9 +20,76 @@
 						<h2>Aagya uprety</h2>
 					</div>
 				</nav>
-				<div class="object">Objectives:</div>
-				<ul class="points">
-				</li>.The main objectives to give this assaignment is to provide  clear idea of  learning in response to  student work are documented. IT is to estimate our own capability of making those websites by our ownselves.</li>
-				<li>.The assaignment was to make a portfolio page using html and css by our ownself.</li>
-					<li>.The coding that we have done should be pushed in github as well .</li>
-				</ul>
+				<div class="sitereport-content">
+					<h2 class="site-main-head">site report</h2>
+
+					<section class="learning-experience">
+						<p>Date:27/05/2021</p>
+						<h3 class="title-sitereport">Learning Experience</h3>
+						<p> 
+							At the begining,learningof web development courses was annoying for me beacause i was not that familier with any programming language before i started learning this course.Because of that i had to be more focused and studied more and more.
+							Before going to any other advance programming languages,i choosed to go with html first because i had heard that learning html is easy for the beginner.So,I started learning from the basic of html like what are the tags for link,heading,paragraph,tables,forms etc.
+							and frankly saying,i was not able to understand those tags.I practiced so much and applied those tags on building a small project.
+							After i completed the basic of html,i moved in to the advanced and learning the advance topics was not that hard for me beacause i had learnt the basic very carefully.
+							<br>
+							And then i learnt CSS to style my html content.I found css very interesting beacause it was putting the style on my html tags.Learning css was not that easy than html.I watched so many youtube tutorials,read online documentation and finally i found myself a bit confidence doing css .And after that building this projects,all my doubts were cleared.
+
+						</p>
+						<h4 class="title-sitereport">Ups and downs:</h4>
+						<p>
+							While doing this project,i felt so many ups and downs because i had not not done any wesites before .And it was quite annyoing for  me when i started to do this project 
+							<br>
+							As i was beginner,it was very challenging for me to do this task an awesome website.
+
+							I faced so many difficulties like....
+							</p>
+							<p>
+								1. i was not able to display the section in rows ,columnand aside .
+								<br>
+								2. I felt so many difficulties while doing the navigation bar and showing them in rows and column.
+								<br>
+								3. Selecting the perfect background color,text-color ....
+								<br>
+								4. Building the contact form with validation..
+								<br>
+								5. Choosing the height,width for the selection like how much height,width should the section occupy..
+							</p>
+							<br>
+							<p>
+								At last, after facing all those difficulties ,i was very much happy 
+								at the time of completion of this project.It was the best experience working on this project.
+							</p>
+						</section>
+						<selection class="module-experience">
+                        <h3 class="title-sitereport">Module Experience</h3>
+                        In the project, i have used the didplay called flex and block.This website is completely responsive and can run on any devices. I built complete website using sublime-text as my text editors.It helped me alot choosing the background color,font-color and so on..
+                    </selection>
+                    <selection class="design-decision">
+                    <h3 class="title-sitereport">Design Decision:</h3>
+                    <p>
+                    	As a beginner,chossing the perfect good-looking design was very tough for me at the beginning . And before implementing the design,i watched so many wesites on google and it was quite amazing and i was very much curious to build such as design so,i tried to implement design my portfolio.
+
+                    	first up all, i draw one container(in a paper),where i implement the place for different section like ,navigation bar,images,contact,text,heading,footer,content area.
+                    	<br>After i did all my design,i implemented those on my portfolio.
+                    	And you can see those design here...
+                    </p>
+                </selection>
+                <selection class="validation-report">
+                	<h3 class="title-sitereport">Validation Report:</h3>
+                	<div class="validate-form-image">
+                		<div class="validate-report">
+                			<p>The screeshot of validation report is shown in the figure mentioned below.
+                				In the contact form, i have set the attribute called<u>required</u>in the input field of 
+                				First Name,last Name and even in number .The required attributes prevents from the form to be submitted if the user missed to fill those input field.unless users
+                				don't fill those input field the form will not be submitted and it will give an error
+                				called
+                				<em>"please fill out this field."</em>..
+                				<br>
+                				After the users thave filled all those required input field then the form can be submitted 
+                				without any errors.
+                			</p>
+                			<br>
+                		</div>
+                		<div class="v-image">
+
+
