modified folder of some page of html and css

--- a/cv.html
+++ b/cv.html
@@ -22,7 +22,8 @@
 				</nav>
 				<div class="cv-main-content">
 					<div class="name-dp">
-						
+						<div class="cv-dp"src="aagya.jpg"alt="user DP">
+
 						<img class="about-me">
 						<h3 class="name">Aagya Uprety</h3>
 						<p class="cv-intro">I am the student of bsc.computing(hons)at Nami college,
@@ -30,7 +31,7 @@
 					</div>
 				</div>
 				<div class="resume">
-					<div class="cv-content-info">
+					<div class="cv-contact-info">
 						<h2 class="center">contact me!</h2>
 						<br>
 						<address class="contact-address">
@@ -46,13 +47,13 @@
 							<hr>
 							<h2 class="center">Education</h2>
 							<br>
-							<selection class="contact-address">
+							<section class="contact-address">
 								<p>SEE:- Valley View English<br>School</p>
 								<br>
 								<p>+2:- Global College Of Management</p>
 								<br>
 								<p>Bachelor:- Nami college,kathmand</p>
-							</selection>
+							</section>
 							<br>
 							<hr>
 
