--- a/portfolio.html
+++ b/portfolio.html
@@ -16,18 +16,159 @@
 						<li><a href="contact.html">contact</a></li>
 						<li><a href="sitereport.html">sitereport</a></li>
 					</ul>
-				</nav>
-					<div>
-						<div class="main">
-							<div class="rows">
-						<h4 class="title-title">skills</h4>
-						<img src="dummy1.jpg"palceholder/500x400>
+				         </div>
+				         <div class="logo">
+				         	<h2>Aagya Uprety</h2>
+				         </div>
+				     </nav>
+				    <div class="portfolio-content"id="p-content">
+				    	 <div class="home-content"id="cv-wall">
+
+				    	 	<div class="about">
+				    	 		<h1 id="intro">Hey, I'm Aagya Uprety</h1>
+						<p id="intro-para">I am the  student of Bsc.computing at Nami college,
+						kathmandu</p>
 					</div>
-					<div class="title">
-					   <img src="dummy2.jpg"palceholder/50x20>
-					</div>
-				<div class="title">
-					 <img src="dummy3.jpg"palceholder/200x50>
+					<div class="profile-image">
+						<img class="dummy3-image"src="dummy3.jpg">
 					</div>
 				</div>
+				<div class="cv-main-content">
+					<div class="resume"id="resume2">
+						<div class="cv-contact-info">
+							<h2 class="center">Contact me!</h2>
+							<br>
+							+9779801320318
+							<br>
+							aagyauprety@gmail.com
+							<br>
+							baneshwor,kathmandu
+							<br>
+							Nepal
+							</address>
+							<br>
+							<hr>
+							<h2 class="center">Education</h2>
+							<br>
+							<section class="contact-address">
+								<p>SEE:- Valley View English<br>School</p>
+								<br>
+								<p>+2:- Global College Of Management</p>
+								<br>
+								<p>Bachelor:- Nami college,kathmand</p>
+							</section>
+							<br>
+							<hr>
+
+							<div>
+								<h2 class="center">Language</h2></li>
+								   <li class="cv-list">English</h2></li>
+									<li class="cv-list">Nepali</h2></li>
+										<br>
+									</div>
+									<hr>
+									<br>
+									<h2 class="center">Achievement</h2>
+									<li class="cv-list">SEE GPA:3.2</h2></li>
+										<li class="cv-list">+2 GPA:3.01</h2></li>
+									</div>
+									<div class="my-content-info">
+										<div>
+											<h2 class="center">About</h2>
+											<p>
+												I'm Aagya Uprety,I am the student of bsc.computing at Nami college,kathmandu
+												and currently
+												pursuing my Bachelor Degree.
+											</p>
+										</div>
+										<br>
+										<div>
+											<h2 class="center">Work Experience</h2>
+											<p>
+												To secure a challenging position in reputable organization to expand my learnings,skillsand knowledge.
+											</p>
+										</div>
+										<br>
+										<div>
+											<div>
+												<h2 class="center">objective</h2>
+												<p>
+													To be an expert in my area of work,with a passion for challenging,innovation and working with people and communities.
+												</p>
+												<div>
+													<br>
+													<div>
+														<h2 class="center">skills</h2>
+														html
+														<br>
+														css
+														<br>
+														Computer skills
+														<br>
+														Microsoft
+														<br>
+														<br>
+														<h2 class="center">Curricular Activities</h2>
+
+													<ul>
+													<li class="cv-list">1.listening Music</li>
+													<li class="cv-list">2. Dancing</li>
+													<li class="cv-list">3. reading novels</li>
+													<li class="cv-list">4.hanging out with friends and family</li>
+													<li class="cv-list">5. singing</li>
+												</ul>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="contact-content"style="background-color:rgb(233 ,233, 149)">
+									<div class="contact-info">
+										<h2 class="contact-head">Conatct me!</h2>
+										<p>
+												+9779801320318
+							<br>
+							<a class="mail" href="mail to:aagyauprety@gmail.com">aagyauprety@gmail.com</a>
+						</p>
+						<br>
+						<address class="address">
+							Baneshwor,kathmandu
+							<br>Nepal
+						</address>
+					</div>
+					<div class="form">
+						<p class="enquiry">For any queries,feel comfortable to contact me...
+						</p>
+						<form class="form-content">
+						<label for="fname">first name</label>
+						<br>
+						<input type="text" id="fname"name="fname"placeholder="your Name..."required>
+						<br>
+						<label for="lname">last name</label>
+						<br>
+						<input type="text" id="lname"name="lname"placeholder="your last Name..."required>
+						<br>
+						<label for="mobile">mobile mumber</label>
+						<br>
+						<input type="text" id="mobile"name="mobile"placeholder="98********"required>
+						<br>
+						<label for="message">enquiry</label>
+						<br>
+						<input type="text" id="submit"class="submit"type="submit">
+						<br>
+						<textarea name="message"placeholder="write something..."></textarea>
+						<br>
+						<input class="submit"class="submit"type="submit">
+					</form>
+				</div>
 			</div>
+		</footer>
+		<p>
+			All copyright reserved 2021 @aagya
+			<br>
+			<a href="mailto:aagyauprety@gmail.com">aagyauprety@gmail.com</a>
+		</p>
+	</footer>
+</div>
+</div>
+</body>
+<html>
