--- a/sitereport.html
+++ b/sitereport.html
@@ -60,11 +60,11 @@
 								at the time of completion of this project.It was the best experience working on this project.
 							</p>
 						</section>
-						<selection class="module-experience">
+						<section class="module-experience">
                         <h3 class="title-sitereport">Module Experience</h3>
                         In the project, i have used the didplay called flex and block.This website is completely responsive and can run on any devices. I built complete website using sublime-text as my text editors.It helped me alot choosing the background color,font-color and so on..
-                    </selection>
-                    <selection class="design-decision">
+                    </section>
+                    <section class="design-decision">
                     <h3 class="title-sitereport">Design Decision:</h3>
                     <p>
                     	As a beginner,chossing the perfect good-looking design was very tough for me at the beginning . And before implementing the design,i watched so many wesites on google and it was quite amazing and i was very much curious to build such as design so,i tried to implement design my portfolio.
@@ -73,8 +73,8 @@
                     	<br>After i did all my design,i implemented those on my portfolio.
                     	And you can see those design here...
                     </p>
-                </selection>
-                <selection class="validation-report">
+                </section>
+                <section class="validation-report">
                 	<h3 class="title-sitereport">Validation Report:</h3>
                 	<div class="validate-form-image">
                 		<div class="validate-report">
@@ -91,5 +91,6 @@
                 			<br>
                 		</div>
                 		<div class="v-image">
+                			<img class="v-screenshot"src="formvalidation.png">
 
 
