the modification of task

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 		</head>
 		<body>
-			<div class="portfolio-selection">
+			<div class="portfolio-section">
 				<nav class="menu"id="menu-portfolio">
 					<div class="link">
 						<ul>
