--- a/sitereport.html
+++ b/sitereport.html
@@ -92,5 +92,35 @@
                 		</div>
                 		<div class="v-image">
                 			<img class="v-screenshot"src="formvalidation.png">
+                		</div>
+                	</div>
+                </section>
+                <section class="image-progress">
+                	<h3 class="title-sitereport">Images of progress:</h3>
+                	<div class="screenshot">
+                		<div class="screenshot-image">
+                			<div>
+                				<img class="v-screenshot1 "src="index(1).png"alt="screenshotimage">
+                			</div>
+                			<div>
+                				<img class="v-screenshot1 "src="resp.png"alt="screenshotimage">
+                				<div>
+                					<img class="v-screenshot1 "src="res.png"alt="screenshotimage">
+                				</div>
+                				<div class="screenshot-image ">
+                					<div>
+                						<img class="v-screenshot1 "src="index(2).png"alt="screenshotimage">
+                					</div>
+                					<img class="v-screenshot1 "src="index(5).png"alt="screenshotimage">
+                				</div>
+                				<img class="v-screenshot1 "src="index(4).png"alt="screenshotimage">
+                			</div>
+                		</div>
+                	</div>
+                </section>
+                <section class="reference">
+                	<h3 class="title-sitereport">References</h3>
+                	<p>
+
 
 
