different coding has been modified

--- a/sitereport.html
+++ b/sitereport.html
@@ -91,36 +91,52 @@
                 			<br>
                 		</div>
                 		<div class="v-image">
-                			<img class="v-screenshot"src="formvalidation.png">
+                			<img class="v-screenshot"src="formvalidate.jpg">
                 		</div>
                 	</div>
                 </section>
                 <section class="image-progress">
                 	<h3 class="title-sitereport">Images of progress:</h3>
                 	<div class="screenshot">
-                		<div class="screenshot-image">
+                		<div class="screenshot-imagee">
                 			<div>
-                				<img class="v-screenshot1 "src="index(1).png"alt="screenshotimage">
+                				<img class="v-screenshot1 "src="index.jpg.png"alt="screenshotimage">
                 			</div>
                 			<div>
-                				<img class="v-screenshot1 "src="resp.png"alt="screenshotimage">
-                				<div>
-                					<img class="v-screenshot1 "src="res.png"alt="screenshotimage">
+                				<img class="v-screenshot1 "src="res.jpg.png"alt="screenshotimage">
+                				
                 				</div>
-                				<div class="screenshot-image ">
+                				<div class="screenshot-imagee ">
                 					<div>
-                						<img class="v-screenshot1 "src="index(2).png"alt="screenshotimage">
+                						<img class="v-screenshot1 "src="index(2).jpg"alt="screenshotimage">
                 					</div>
-                					<img class="v-screenshot1 "src="index(5).png"alt="screenshotimage">
+                					<div>
+                						<img class="v-screenshot1 "src="index(3).jpg"alt="screenshotimage">
+                					</div>
+                					<div>
+                					<img class="v-screenshot1 "src="index(5).jpg"alt="screenshotimage">
                 				</div>
-                				<img class="v-screenshot1 "src="index(4).png"alt="screenshotimage">
+                				<div>
+                				<img class="v-screenshot1 "src="index(4).jpg"alt="screenshotimage">
                 			</div>
                 		</div>
                 	</div>
                 </section>
                 <section class="reference">
                 	<h3 class="title-sitereport">References</h3>
-                	<p>
+                	<p>for all site i have watched many youtube videos
+                		.coding nepal:https://youtu.be/tcskp-ncN0I(Sep 15, 2020)
+                		.mystery code:https://youtu.be/K1HchLD6fHI(Feb 15, 2021)
+                		.The webshala:https://youtu.be/4mu1vbEz9WM(Oct 25,2020)
+                		. Bedimcode:https://youtu.be/AKNvTxWOdKw(june 25,2020)
+                		<p>for css:https://www.w3schools.com/cssref/pr_dim_line-height.asp(no date mentioned)
+                			.https://www.w3schools.com/html/tryit.asp?filename=tryhtml_responsive_image_maxwidth(date not mentioned)
+                			.https://www.w3schools.com/css/tryit.asp?filename=trycss_navbar_basic_html(date not mentioned)
+                			<p>images:https://images.app.goo.gl/pa1EEdZosQkbJerc9(date not mentioned)
+                				https://images.app.goo.gl/sUjzQvnNdQdvhvi3A(date not mentioned)
+
+                			
+
 
 
 
