all the file are modified

--- a/contact.html
+++ b/contact.html
@@ -2,11 +2,11 @@
 	<html lang="en">
 	<head>
 		<meta name="viewport"content="width=device-width,initial-scale=1.0">
-		<title>Home page</title>
+		<title>Contact</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-		<div class="home-section">
+		<div class="contact-section">
 			<nav class="menu">
 				<div class="link">
 					<ul>
@@ -16,7 +16,9 @@
 						<li><a href="contact.html">contact</a></li>
 						<li><a href="sitereport.html">sitereport</a></li>
 					</ul>
+				</div>
 					<div class="logo">
+						<h2>Aagya uprety</h2>
 						
 					</div>
 				</nav>
@@ -51,8 +53,7 @@
 						<input type="text" id="mobile"name="mobile"placeholder="98********"required>
 						<br>
 						<label for="message">enquiry</label>
-						<br>
-						<input type="text" id="submit"class="submit"type="submit">
+						
 						<br>
 						<textarea name="message"placeholder="write something..."></textarea>
 						<br>
