--- a/cv.html
+++ b/cv.html
@@ -2,12 +2,12 @@
 	<html lang="en">
 	<head>
 		<meta name="viewport"content="width=device-width,initial-scale=1.0">
-		<title>Home page</title>
+		<title>CV</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-		<div class="home-section">
-			<nav class="menu">
+		<div class="cv-content">
+			<nav class="menu" id="cv-menu">
 				<div class="link">
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -16,18 +16,21 @@
 						<li><a href="contact.html">contact</a></li>
 						<li><a href="sitereport.html">sitereport</a></li>
 					</ul>
+				</div>
 					<div class="logo">
 						<h2>Aagya uprety</h2>
 					</div>
 				</nav>
 				<div class="cv-main-content">
 					<div class="name-dp">
-						<div class="cv-dp"src="aagya.jpg"alt="user DP">
+						
+						<img class="aagya-image"src=aagya.jpg>
 
 						<img class="about-me">
 						<h3 class="name">Aagya Uprety</h3>
 						<p class="cv-intro">I am the student of bsc.computing(hons)at Nami college,
-						kathmandu</p>
+						kathmandu
+					</p>
 					</div>
 				</div>
 				<div class="resume">
@@ -58,16 +61,16 @@
 							<hr>
 
 							<div>
-								<h2 class="center">Language</h2></li>
-								   <li class="cv-list">English</h2></li>
-									<li class="cv-list">Nepali</h2></li>
+								<h2 class="center">Language</h2>
+								   <li class="cv-list">English</h2>
+									<li class="cv-list">Nepali</h2>
 										<br>
 									</div>
 									<hr>
 									<br>
 									<h2 class="center">Achievement</h2>
-									<li class="cv-list">SEE GPA:3.2</h2></li>
-										<li class="cv-list">+2 GPA:3.01</h2></li>
+									<li class="cv-list">SEE GPA:3.2</li>
+										<li class="cv-list">+2 GPA:3.01</li>
 									</div>
 									<div class="my-content-info">
 										<div>
@@ -82,7 +85,7 @@
 										<div>
 											<h2 class="center">Work Experience</h2>
 											<p>
-												To secure a challenging position in reputable organization to expand my learnings,skillsand knowledge.
+												To secure a challenging position in reputable organization to expand my learnings,skills and knowledge.
 											</p>
 										</div>
 										<br>
