--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,8 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 		</head>
 		<body>
-			<div class="portfolio-section">
+			<div class="portfolio-section" id="portfolio">
+
 				<nav class="menu"id="menu-portfolio">
 					<div class="link">
 						<ul>
@@ -21,8 +22,8 @@
 				         	<h2>Aagya Uprety</h2>
 				         </div>
 				     </nav>
-				    <div class="portfolio-content"id="p-content">
-				    	 <div class="home-content"id="cv-wall">
+				    <div class="portfolio-content" id="p-content">
+				    	 <div class="home-content" id="cv-wall">
 
 				    	 	<div class="about">
 				    	 		<h1 id="intro">Hey, I'm Aagya Uprety</h1>
@@ -38,6 +39,7 @@
 						<div class="cv-contact-info">
 							<h2 class="center">Contact me!</h2>
 							<br>
+							<address class="contact-address">
 							+9779801320318
 							<br>
 							aagyauprety@gmail.com
@@ -48,6 +50,7 @@
 							</address>
 							<br>
 							<hr>
+
 							<h2 class="center">Education</h2>
 							<br>
 							<section class="contact-address">
@@ -69,8 +72,8 @@
 									<hr>
 									<br>
 									<h2 class="center">Achievement</h2>
-									<li class="cv-list">SEE GPA:3.2</h2></li>
-										<li class="cv-list">+2 GPA:3.01</h2></li>
+									<li class="cv-list">SEE GPA:3.2</li>
+										<li class="cv-list">+2 GPA:3.01</li>
 									</div>
 									<div class="my-content-info">
 										<div>
@@ -95,7 +98,7 @@
 												<p>
 													To be an expert in my area of work,with a passion for challenging,innovation and working with people and communities.
 												</p>
-												<div>
+												</div>
 													<br>
 													<div>
 														<h2 class="center">skills</h2>
@@ -152,8 +155,7 @@
 						<input type="text" id="mobile"name="mobile"placeholder="98********"required>
 						<br>
 						<label for="message">enquiry</label>
-						<br>
-						<input type="text" id="submit"class="submit"type="submit">
+						
 						<br>
 						<textarea name="message"placeholder="write something..."></textarea>
 						<br>
