--- a/sitereport.html
+++ b/sitereport.html
@@ -2,11 +2,11 @@
 	<html lang="en">
 	<head>
 		<meta name="viewport"content="width=device-width,initial-scale=1.0">
-		<title>Home page</title>
+		<title>sitereport</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-		<div class="home-section">
+		<div class="sitereport-section">
 			<nav class="menu">
 				<div class="link">
 					<ul>
@@ -16,6 +16,7 @@
 						<li><a href="contact.html">contact</a></li>
 						<li><a href="sitereport.html">sitereport</a></li>
 					</ul>
+				</div>
 					<div class="logo">
 						<h2>Aagya uprety</h2>
 					</div>
@@ -95,15 +96,15 @@
                 		</div>
                 	</div>
                 </section>
-                <section class="image-progress">
+                <section class="images-progress">
                 	<h3 class="title-sitereport">Images of progress:</h3>
                 	<div class="screenshot">
                 		<div class="screenshot-imagee">
                 			<div>
-                				<img class="v-screenshot1 "src="index.jpg.png"alt="screenshotimage">
+                				<img class="v-screenshot1 "src="index.jpg"alt="screenshotimage">
                 			</div>
                 			<div>
-                				<img class="v-screenshot1 "src="res.jpg.png"alt="screenshotimage">
+                				<img class="v-screenshot1 "src="res.jpg"alt="screenshotimage">
                 				
                 				</div>
                 				<div class="screenshot-imagee ">
@@ -129,11 +130,18 @@
                 		.mystery code:https://youtu.be/K1HchLD6fHI(Feb 15, 2021)
                 		.The webshala:https://youtu.be/4mu1vbEz9WM(Oct 25,2020)
                 		. Bedimcode:https://youtu.be/AKNvTxWOdKw(june 25,2020)
+                	</p>
                 		<p>for css:https://www.w3schools.com/cssref/pr_dim_line-height.asp(no date mentioned)
-                			.https://www.w3schools.com/html/tryit.asp?filename=tryhtml_responsive_image_maxwidth(date not mentioned)
+                			.https://www.w3schools.com/html/tryit.asp?filename=tryhtml_responsive_image_maxwidth(date not mentioned)</p>
                 			.https://www.w3schools.com/css/tryit.asp?filename=trycss_navbar_basic_html(date not mentioned)
                 			<p>images:https://images.app.goo.gl/pa1EEdZosQkbJerc9(date not mentioned)
-                				https://images.app.goo.gl/sUjzQvnNdQdvhvi3A(date not mentioned)
+                				https://images.app.goo.gl/sUjzQvnNdQdvhvi3A(date not mentioned)</p>
+                			</section>
+                		</div>
+                	</div>
+                </body>
+                </html>
+
 
                 			
 
