modified of cv and sitereport

--- a/cv.html
+++ b/cv.html
@@ -24,7 +24,7 @@
 				<div class="cv-main-content">
 					<div class="name-dp">
 						
-						<img class="aagya-image"src=aagya.jpg>
+						<img class="cv-dp"src="aagya.jpg">
 
 						<img class="about-me">
 						<h3 class="name">Aagya Uprety</h3>
@@ -95,7 +95,8 @@
 												<p>
 													To be an expert in my area of work,with a passion for challenging,innovation and working with people and communities.
 												</p>
-												<div>
+
+												</div>
 													<br>
 													<div>
 														<h2 class="center">skills</h2>
