--- a/sitereport.html
+++ b/sitereport.html
@@ -80,7 +80,7 @@
                 	<div class="validate-form-image">
                 		<div class="validate-report">
                 			<p>The screeshot of validation report is shown in the figure mentioned below.
-                				In the contact form, i have set the attribute called<u>required</u>in the input field of 
+                				In the contact form, i have set the attribute called required in the input field of 
                 				First Name,last Name and even in number .The required attributes prevents from the form to be submitted if the user missed to fill those input field.unless users
                 				don't fill those input field the form will not be submitted and it will give an error
                 				called
