--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,9 @@
 						kathmandu</p>
 					</div>
 					<div class="profile-image">
-						<img class="dummy3-image"src="dummy3.jpg">
+						<img class="dummy2-image"src="dummy2.jpg"placeholder/800x200>
+						<img class="dummy3-image"src="dummy3.jpg"placeholder/800x200>
+				
 					</div>
 				</div>
 				<div class="cv-main-content">
