--- a/sitereport.html
+++ b/sitereport.html
@@ -126,14 +126,14 @@
                 <section class="reference">
                 	<h3 class="title-sitereport">References</h3>
                 	<p>for all site i have watched many youtube videos
-                		.coding nepal:https://youtu.be/tcskp-ncN0I(Sep 15, 2020)
-                		.mystery code:https://youtu.be/K1HchLD6fHI(Feb 15, 2021)
-                		.The webshala:https://youtu.be/4mu1vbEz9WM(Oct 25,2020)
-                		. Bedimcode:https://youtu.be/AKNvTxWOdKw(june 25,2020)
+                		. i have used this to make my contact form  website for my coding nepal:https://youtu.be/tcskp-ncN0I(Sep 15, 2020)
+                		.to make and have some idea about  a portfolio : mystery code:https://youtu.be/K1HchLD6fHI(Feb 15, 2021)
+                		.for cv :The webshala: https://youtu.be/4mu1vbEz9WM(Oct 25,2020)
+                		. for all site to recheck my code :Bedimcode:https://youtu.be/AKNvTxWOdKw(june 25,2020)
                 	</p>
-                		<p>for css:https://www.w3schools.com/cssref/pr_dim_line-height.asp(no date mentioned)
-                			.https://www.w3schools.com/html/tryit.asp?filename=tryhtml_responsive_image_maxwidth(date not mentioned)</p>
-                			.https://www.w3schools.com/css/tryit.asp?filename=trycss_navbar_basic_html(date not mentioned)
+                		<p>for css: for line height: purpose of using it:https://www.w3schools.com/cssref/pr_dim_line-height.asp(no date mentioned)
+                			.to make a responsive page for my whole websites :https://www.w3schools.com/html/tryit.asp?filename=tryhtml_responsive_image_maxwidth(date not mentioned)</p>
+                			.how to put nav in html i have taken this website for reference: https://www.w3schools.com/css/tryit.asp?filename=trycss_navbar_basic_html(date not mentioned)
                 			<p>images:https://images.app.goo.gl/18x9reNUNfScHtEp8 (date not mentioned)
                 				https://images.app.goo.gl/sUjzQvnNdQdvhvi3A(date not mentioned)</p>
                 			</section>
