modification in html and css

--- a/sitereport.html
+++ b/sitereport.html
@@ -21,14 +21,14 @@
 						<h2>Aagya uprety</h2>
 					</div>
 				</nav>
-				<div class="sitereport-content">
-					<h2 class="site-main-head">site report</h2>
+				<div class= "sitereport-content">
+					<h2 class="site-main-head">Site Report</h2>
 
 					<section class="learning-experience">
 						<p>Date:27/05/2021</p>
-						<h3 class="title-sitereport">Learning Experience</h3>
+						<h3 class="title-sitereport">Learning Experience</h4>
 						<p> 
-							At the begining,learningof web development courses was annoying for me beacause i was not that familier with any programming language before i started learning this course.Because of that i had to be more focused and studied more and more.
+							At the begining,learning of web development courses was annoying for me beacause i was not that familier with any programming language before i started learning this course.Because of that i had to be more focused and studied more and more.
 							Before going to any other advance programming languages,i choosed to go with html first because i had heard that learning html is easy for the beginner.So,I started learning from the basic of html like what are the tags for link,heading,paragraph,tables,forms etc.
 							and frankly saying,i was not able to understand those tags.I practiced so much and applied those tags on building a small project.
 							After i completed the basic of html,i moved in to the advanced and learning the advance topics was not that hard for me beacause i had learnt the basic very carefully.
@@ -36,13 +36,14 @@
 							And then i learnt CSS to style my html content.I found css very interesting beacause it was putting the style on my html tags.Learning css was not that easy than html.I watched so many youtube tutorials,read online documentation and finally i found myself a bit confidence doing css .And after that building this projects,all my doubts were cleared.
 
 						</p>
-						<h4 class="title-sitereport">Ups and downs:</h4>
+						<h4 class="title-sitereport"> Ups and downs:</h4>
 						<p>
 							While doing this project,i felt so many ups and downs because i had not not done any wesites before .And it was quite annyoing for  me when i started to do this project 
 							<br>
 							As i was beginner,it was very challenging for me to do this task an awesome website.
 
 							I faced so many difficulties like....
+							<br>
 							</p>
 							<p>
 								1. i was not able to display the section in rows ,columnand aside .
@@ -93,7 +94,12 @@
                 		</div>
                 		<div class="v-image">
                 			<img class="v-screenshot"src="formvalidate.jpg">
+
+
                 		</div>
+                		<div class="v-image">
+                			<img class="v-screenshot"src="validationcheck.jpg">
+                			<img class="v-screenshot"src="validation1.jpg">
                 	</div>
                 </section>
                 <section class="images-progress">
@@ -139,6 +145,9 @@
                 			</section>
                 		</div>
                 	</div>
+                </section>
+            </div>
+            
                 </body>
                 </html>
 
