--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--begining of home page-->
 <!doctype html>
 	<html lang="en">
 	<head>
@@ -6,6 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
+		<!--div section divided-->
 		<div class="home-section">
 			<nav class="menu">
 				<div class="link">
@@ -24,13 +26,14 @@
 				
 				<div class="home-content">
 					<div class="about">
+						<!--intro for my home page-->
 						<h1 id="intro">Hey, I'm Aagya Uprety</h1>
 						<p id="intro-para">I am the  student of Bsc.computing at Nami college,
 						kathmandu</p>
 					</div>
 					<div class="profile-image">
 						<img class="aagya-image" src="aagya.jpg" alt="dp-user">
-						
+					<!--end of home page -->	
 					</div>
 				</div>
 			</div>
