commenting on contact.html

--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,4 @@
+<!--for the starting of contact page-->
 <!doctype html>
 	<html lang="en">
 	<head>
@@ -17,6 +18,7 @@
 						<li><a href="sitereport.html">sitereport</a></li>
 					</ul>
 				</div>
+				<!--representing my logo-->
 					<div class="logo">
 						<h2>Aagya uprety</h2>
 						
@@ -26,6 +28,7 @@
 					<div class="contact-info">
 						<h2 class="contact-head">contact Me!</h2>
 						<p>
+							<!--details for my contact-->
 							+9779801320318
 							<br>
 							<a class="mail" href="mail to:aagyauprety@gmail.com">aagyauprety@gmail.com</a>
@@ -58,6 +61,7 @@
 						<textarea name="message"placeholder="write something..."></textarea>
 						<br>
 						<input class="submit"class="submit"type="submit">
+						<!-- ending of my contact page-->
 					</form>
 				</div>
 			</div>
