commenting on site reports

--- a/sitereport.html
+++ b/sitereport.html
@@ -1,3 +1,4 @@
+<!--starting of sitereport-->
 <!doctype html>
 	<html lang="en">
 	<head>
@@ -23,7 +24,7 @@
 				</nav>
 				<div class= "sitereport-content">
 					<h2 class="site-main-head">Site Report</h2>
-
+                   <!--my experience while doing this website-->
 					<section class="learning-experience">
 						<p>Date:27/05/2021</p>
 						<h3 class="title-sitereport">Learning Experience</h4>
@@ -102,6 +103,7 @@
                 			<img class="v-screenshot"src="validation1.jpg">
                 	</div>
                 </section>
+                <!--images of website -->
                 <section class="images-progress">
                 	<h3 class="title-sitereport">Images of progress:</h3>
                 	<div class="screenshot">
