commenting on cv page

--- a/cv.html
+++ b/cv.html
@@ -1,3 +1,4 @@
+<!-- starting of cv page-->
 <!doctype html>
 	<html lang="en">
 	<head>
@@ -33,6 +34,7 @@
 					</p>
 					</div>
 				</div>
+				<!--detail info for resume-->
 				<div class="resume">
 					<div class="cv-contact-info">
 						<h2 class="center">contact me!</h2>
@@ -118,6 +120,7 @@
 													<li class="cv-list">4.hanging out with friends and family</li>
 													<li class="cv-list">5. singing</li>
 												</ul>
+												
 											</div>
 										</div>
 									</div>
