commenting on portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,3 +1,4 @@
+<!--starting of portfolio page-->
 <!doctype html>
 	<html lang="en">
 	<head>
@@ -30,6 +31,7 @@
 						<p id="intro-para">I am the  student of Bsc.computing at Nami college,
 						kathmandu</p>
 					</div>
+					<!-- using image as placeholder-->
 					<div class="profile-image">
 						<img class="dummy2-image"src="dummy2.jpg"placeholder/800x200>
 						<img class="dummy3-image"src="dummy3.jpg"placeholder/1200x400>
@@ -171,6 +173,7 @@
 			<a href="mailto:aagyauprety@gmail.com">aagyauprety@gmail.com</a>
 		</p>
 	</footer>
+	<!--end-->
 </div>
 </div>
 </body>
